# auto-gateway

./: .gitignore  README.md  config.json.example  pyproject.toml
auto_gateway/: __init__.py
auto_gateway/cli/: main.py
auto_gateway/config/: manager.py  schema.py
auto_gateway/core/: exceptions.py  models.py  router.py  router_tool_calls_helpers.py  router_toolcalls_patch.py  server.py  sse_repair.py
auto_gateway/network/: hosting.py  hosting_test_utils.py  tunnels.py  uvicorn_runner.py
auto_gateway/providers/: base.py  google.py  openai_compatible.py  registry.py
auto_gateway/strategies/: adaptive.py  bandit.py  base.py  sequential.py
scripts/: verify_gateway.py
tests/: test_alias_feature.py  test_comprehensive_api.py  test_openai_streaming_delta_shapes.py  test_simple_smoke.py  test_smoke_server.py  test_sse_repair.py  test_streaming_and_failover.py  test_tunnel_url_parsing.py
